# markdown-priority-badges

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/markdown_priority_badges/: __init__.py
src/zensical_tasklist_priority/: __init__.py
tests/: test_parsing.py  test_priority_badges.py  test_priority_tasks.py
