[project]
name = "zensical-tasklist-priority"
version = "0.1.0"
description = "Zensical / Python-Markdown extension: priority badges (! / !!) for task-list items"
readme = "README.md"
license = "MIT"
authors = [{ name = "Antoine Keranflec'h" }]
requires-python = ">=3.10"
dependencies = ["markdown>=3.5"]
keywords = ["zensical", "mkdocs", "markdown", "tasklist", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
]

[dependency-groups]
dev = ["pytest>=8.0", "pymdown-extensions>=10.0", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zensical_tasklist_priority"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
