[project]
name = "markdown-priority-badges"
version = "0.1.0"
description = "Python-Markdown extension: priority badges from ! / !! task-list shorthand and !level inline keywords"
readme = "README.md"
license = "MIT"
authors = [{ name = "Antoine Keranflec'h" }]
requires-python = ">=3.10"
dependencies = ["markdown>=3.5"]
keywords = ["markdown", "mkdocs", "zensical", "badge", "priority", "tasklist", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
]

[dependency-groups]
dev = ["pytest>=8.0", "pymdown-extensions>=10.0", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_priority_badges"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
